k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promotions
  labels:
    app: promotions
spec:
  selector:
    app: promotions
  ports:
    - port: 8080
      targetPort: 8080
